Rename compilation targets

--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
 	<div id="boardgame">&nbsp;</div>
 
 	<script src="js/lib/jquery-2.1.0.min.js"></script>
-	<script src="js/compiled/hello.js"></script>
+	<script src="js/compiled/cljs38.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
